--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "node-fetch": "^2.6.1",
     "tweetnacl": "^1.0.0",
     "tweetnacl-util": "^0.15.0",
-    "@types/node-fetch": "^2.5.7"
+    "@types/node-fetch": "^2.5.7",
+    "crypto-browserify": "^3.12.0",
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
