--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "tweetnacl": "^1.0.0",
     "tweetnacl-util": "^0.15.0",
     "@types/node-fetch": "^2.5.7",
-    "crypto-browserify": "^3.12.0",
+    "crypto-browserify": "^3.12.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
